Adjusting sqlalchemy backend to new AST Fixing tests Adding sqlalchemy to unit tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
         pytest
         cd tests/django_test
         python manage.py test testapp
+        cd ../sqlalchemy_test/
+        python3 -m unittest
   publish:
     runs-on: ubuntu-20.04
     needs: test
