Updating debian packaging for UbuntuGIS upload

--- a/debian/control
+++ b/debian/control
@@ -1,21 +1,24 @@
 Source: pygeofilter
-Section: python
-Priority: optional
 Maintainer: Fabian Schindler <fabian.schindler@gmail.com>
 Uploaders: Angelos Tzotsos <gcpp.kalxas@gmail.com>
+Section: python
+Priority: optional
 Build-Depends: debhelper (>= 9),
+               python3-setuptools,
                dh-python,
+               dpkg-dev (>= 1.16),
+               autoconf,
                python3-all,
-               python3-setuptools
-Standards-Version: 4.3.0
-Vcs-Git: https://github.com/geopython/pygeofilter.git
-Homepage: https://geopython.github.io/pygeofilter
+               python3-all-dev
+Standards-Version: 3.9.3
+Homepage: https://github.com/geopython/pygeofilter
 
 Package: python3-pygeofilter
-Architecture: all
-Depends: ${python3:Depends},
-         python3-dateparser,
-         python3-ply,
-         ${misc:Depends}
-Description: CQL parser for Python
- pygeofilter is a pure Python parser implementation of the OGC CQL standard.
+Architecture: any
+Section: web
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+         python3
+Description: This package contains the pygeofilter library
+ .
+ pygeofilter is a pure Python parser implementation of OGC filtering standards.
