--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [metadata]
 version = attr: pygeofilter.__version__
 
+######################################################
+# code formating / lint / type checking configurations
 [isort]
 profile = black
 default_section = THIRDPARTY
@@ -9,4 +11,7 @@ default_section = THIRDPARTY
 ignore = E501,W503,E203
 exclude = .git,__pycache__,docs/conf.py,old,build,dist
 max-complexity = 12
-max-line-length = 90
+max-line-length = 80
+
+[mypy]
+ignore_missing_imports = True
