--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,13 +1,3 @@
-django
-geoalchemy2
-sqlalchemy<2.0.0
-geopandas
-fiona
-pyproj
-rtree
-pygml
-dateparser
-pygeoif==0.7
-lark
-elasticsearch
-elasticsearch-dsl
+tox==4.5.1
+pytest
+pytest-django
