--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,14 @@ jobs:
   test:
     runs-on: ubuntu-20.04
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ['3.7', '3.8', '3.9']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+    env:
+      PYTHON: ${{ matrix.python-version }}
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v3
       name: Setup Python ${{ matrix.python-version }}
       with:
         python-version: ${{ matrix.python-version }}
@@ -19,23 +22,13 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y binutils libproj-dev gdal-bin libgdal-dev libsqlite3-mod-spatialite spatialite-bin
-        pip install -r requirements-test.txt
-        pip install -r requirements-dev.txt
+        pip install tox
         pip install pygdal=="`gdal-config --version`.*"
-        pip install .
-    - name: Configure sysctl limits
-      run: |
-        sudo swapoff -a
-        sudo sysctl -w vm.swappiness=1
-        sudo sysctl -w fs.file-max=262144
-        sudo sysctl -w vm.max_map_count=262144
+    
     - name: Run elasticsearch docker container 📦
       run: |
-        docker compose up --build es01
-    - name: Run unit tests
-      run: |
-        pytest
-    # - name: run pre-commit (code formatting, lint and type checking)
-    #   run: |
-    #     python -m pip install pre-commit
-    #     pre-commit run --all-files
+        docker compose up --build --detach es01
+
+    - name: Run tox targets for ${{ matrix.python-version }}
+      run: tox run -f py$(echo ${{ matrix.python-version }} | tr -d .)
+
