--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [ push, pull_request ]
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
@@ -24,6 +24,7 @@ jobs:
         sudo apt-get install -y binutils libproj-dev gdal-bin libgdal-dev libsqlite3-mod-spatialite spatialite-bin
         pip install tox
         sudo -H pip install gdal=="`gdal-config --version`.*"
+        sudo -H pip install pygdal=="`gdal-config --version`.*"
     
     - name: Run elasticsearch docker container 📦
       run: |
