Update main.yml, requirements-gdal.txt, and tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,8 @@ requires =
 env_list = 
     py{38,39,310,311}-django{32,40,41,42}
 
+passenv = GDAL_VERSION
+
 [testenv]
 description = run unit tests
 deps=
@@ -11,8 +13,9 @@ deps=
     django40: Django>=4.0,<4.1
     django41: Django>=4.1,<4.2
     django42: Django>=4.2,<4.3
+    -rrequirements-gdal.txt
     -rrequirements-base.txt
-    -r requirements-test.txt
+    -rrequirements-test.txt
 
 setenv =
     PYTHONPATH = {toxinidir}
