--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y binutils libproj-dev gdal-bin libgdal-dev libsqlite3-mod-spatialite spatialite-bin
         pip install tox
+        pip install --upgrade pip setuptools==57.5.0
+
         echo -e "gdal==`gdal-config --version`.*\npygdal==`gdal-config --version`.*" >> requirements-gdal.txt
     
     - name: Run elasticsearch docker container 📦
