--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         sudo apt-get install -y binutils libproj-dev gdal-bin libgdal-dev libsqlite3-mod-spatialite spatialite-bin
         pip install tox
 
-        echo -e "gdal==`gdal-config --version`.*\npygdal==`gdal-config --version`.*" >> requirements-gdal.txt
+        echo -e "gdal==`gdal-config --version`.*" >> requirements-gdal.txt
     
     - name: Run elasticsearch docker container 📦
       run: |
