Update .env, main.yml, and 7 more files...

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
+# This env file is used by docker compose to inject env variables inside the docker-compose.yml file (not provided to container)
+
 # Project namespace (defaults to the current folder name if not set)
 #COMPOSE_PROJECT_NAME=myproject
-
 
 # Password for the 'elastic' user (at least 6 characters)
 ELASTIC_PASSWORD=changeme
