--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,11 @@
 requires =
     tox>=4
 env_list = 
-    py{3.8,3.9,3.10,3.11}-django{40,41,42}
+    py{3.9,3.10}-django{40,41,42}
 
 [testenv]
 description = run unit tests
 deps=
-    
-    django32: Django>=3.2,<4.0
     django40: Django>=4.0,<4.1
     django41: Django>=4.1,<4.2
     django42: Django>=4.2,<4.3
@@ -21,4 +19,6 @@ setenv =
 
 commands =
     python -m pytest {posargs}
+
+passenv = *
 
