--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,14 @@
-name: build ⚙️
+name: test ⚙️
 
 on: [ push, pull_request ]
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
-      matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
-    env:
-      PYTHON: ${{ matrix.python-version }}
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-python@v3
-      name: Setup Python ${{ matrix.python-version }}
-      with:
-        python-version: ${{ matrix.python-version }}
-        cache: pip
-    - name: Install requirements
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y binutils libproj-dev gdal-bin libgdal-dev libsqlite3-mod-spatialite spatialite-bin
-        pip install tox
-
-        echo -e "gdal==`gdal-config --version`.*" >> requirements-gdal.txt
-    
     - name: Run elasticsearch docker container 📦
       run: |
         docker compose up --build test-gdal-322
