fix: adding dependency for publishing packages

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         python-version: "3.x"
     - name: Install build dependency
-      run: pip install wheel
+      run: pip install wheel setuptools
     - name: Build package
       run: python setup.py sdist bdist_wheel --universal
     - name: Publish package
