fix(CI): using separate file for tracking version to help with release-please action

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-version = attr: pygeofilter.__version__
+version = attr: pygeofilter.version.__version__
 
 ######################################################
 # code formating / lint / type checking configurations
