--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,24 +4,29 @@ on: [ push, pull_request ]
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.9', '3.10', '3.11', '3.12']
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
+    - uses: actions/checkout@master
+    - uses: actions/setup-python@v5
       name: Setup Python ${{ matrix.python-version }}
       with:
         python-version: ${{ matrix.python-version }}
         cache: pip
+    - name: Install GDAL with Python bindings
+      uses: awalsh128/cache-apt-pkgs-action@v1.4.3
+      with:
+        packages: gdal-bin libgdal-dev
+        version: 3.8.4
     - name: Install requirements
       run: |
         sudo apt-get update
-        sudo apt-get install -y binutils libproj-dev gdal-bin libgdal-dev libsqlite3-mod-spatialite spatialite-bin
+        sudo apt-get install -y binutils libproj-dev libsqlite3-mod-spatialite spatialite-bin
         pip install -r requirements-test.txt
         pip install -r requirements-dev.txt
-        pip install pygdal=="`gdal-config --version`.*"
+        pip install --global-option=build_ext --global-option="-I/usr/include/gdal" GDAL==`gdal-config --version`
         pip install .
     - name: Configure sysctl limits
       run: |
