--- a/Dockerfile-3.9
+++ b/Dockerfile-3.9
@@ -17,14 +17,14 @@ WORKDIR /app
 
 COPY requirements-test.txt .
 COPY requirements-dev.txt .
-RUN pip install -r requirements-test.txt
-RUN pip install -r requirements-dev.txt
+RUN pip3 install -r requirements-test.txt
+RUN pip3 install -r requirements-dev.txt
 
 COPY pygeofilter pygeofilter
 COPY tests tests
 COPY README.md .
 COPY setup.py .
-RUN pip install -e .
+RUN pip3 install -e .
 
 RUN chmod +x tests/execute-tests.sh 
 
