--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,12 @@ jobs:
         host node port: 9300
         node port: 9300
         discovery type: 'single-node'
+    - name: Install and run Solr 📦 
+      uses: OSGeo/solr-action@main
+      with:
+        solr_version: 9.8.1
+        host_port: 8983
+        container_port: 8983
     - name: Install and run OpenSearch 📦
       uses: esmarkowski/opensearch-github-action@v1.0.0
       with:
