--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,8 @@ Architecture: any
 Section: web
 Depends: ${shlibs:Depends},
          ${misc:Depends},
-         python3
+         python3,
+         python3-click
 Description: This package contains the pygeofilter library
  .
  pygeofilter is a pure Python parser implementation of OGC filtering standards.
