--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y binutils gdal-bin libgdal-dev libproj-dev libsqlite3-mod-spatialite spatialite-bin
-        pip install -r requirements-test.txt
-        pip install -r requirements-dev.txt
-        pip install gdal=="`gdal-config --version`.*"
-        pip install .
+        pip3 install -r requirements-test.txt
+        pip3 install -r requirements-dev.txt
+        pip3 install gdal=="`gdal-config --version`.*"
+        pip3 install .
     - name: Configure sysctl limits
       run: |
         sudo swapoff -a
@@ -49,5 +49,5 @@ jobs:
         pytest
     # - name: run pre-commit (code formatting, lint and type checking)
     #   run: |
-    #     python -m pip install pre-commit
+    #     python -m pip3 install pre-commit
     #     pre-commit run --all-files
